--- a/stories/index.html
+++ b/stories/index.html
@@ -509,6 +509,12 @@
       <td><a name="yue0053"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0066</td>
+      <td><a href="/stories/yue/0066_羅姿卑妮同三條頭髮_slides.html" target="_blank">羅姿卑妮同三條頭髮</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td><a href="/stories/yue/0067_整餸_slides.html" target="_blank">整餸</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -623,6 +629,12 @@
       <td><a name="yue0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0158</td>
+      <td><a href="/stories/yue/0158_雞乸同老鷹_slides.html" target="_blank">雞乸同老鷹</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0192</td>
       <td><a href="/stories/yue/0192_希望係個花生醬三文治_slides.html" target="_blank">希望係個花生醬三文治</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -689,6 +701,12 @@
       <td><a name="yue0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0296</td>
+      <td><a href="/stories/yue/0296_賣香蕉嘅湯姆_slides.html" target="_blank">賣香蕉嘅湯姆</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0302</td>
       <td><a href="/stories/yue/0302_火_slides.html" target="_blank">火</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -699,6 +717,12 @@
       <td><a href="/stories/yue/0309_大同細_slides.html" target="_blank">大同細</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0309"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/yue/0324_離開屋企去城市嘅日子_slides.html" target="_blank">離開屋企去城市嘅日子</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0327</td>
@@ -4701,7 +4725,7 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#vi0066">vi</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -4899,7 +4923,7 @@
       <td>0158</td>
       <td><a href="http://africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#tl0158">tl</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#tl0158">tl</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -5067,7 +5091,7 @@
       <td>0296</td>
       <td><a href="http://africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#tl0296">tl</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -5121,7 +5145,7 @@
       <td>0324</td>
       <td><a href="http://africanstorybook.org/stories/day-i-left-home-city">The day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#vi0324">vi</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
