--- a/stories/index.html
+++ b/stories/index.html
@@ -713,6 +713,12 @@
       <td><a name="yue0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0294</td>
+      <td><a href="/stories/yue/0294_亞嫲嘅香蕉_slides.html" target="_blank">亞嫲嘅香蕉</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0296</td>
       <td><a href="/stories/yue/0296_賣香蕉嘅湯姆_slides.html" target="_blank">賣香蕉嘅湯姆</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5097,7 +5103,7 @@
       <td>0294</td>
       <td><a href="http://africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#tl0294">tl</a>, <a href="#zh0294">zh</a></td>
+      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#tl0294">tl</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
