--- a/stories/index.html
+++ b/stories/index.html
@@ -527,6 +527,12 @@
       <td><a name="yue0068"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0072</td>
+      <td><a href="/stories/yue/0072_指蜜鳥嘅報仇_slides.html" target="_blank">指蜜鳥嘅報仇</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0073</td>
       <td><a href="/stories/yue/0073_計數_slides.html" target="_blank">計數</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -647,6 +653,12 @@
       <td><a name="yue0199"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0201</td>
+      <td><a href="/stories/yue/0201_驢仔_slides.html" target="_blank">驢仔</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0206</td>
       <td><a href="/stories/yue/0206_牙_slides.html" target="_blank">牙</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -714,7 +726,7 @@
     </tr>
     <tr>
       <td>0294</td>
-      <td><a href="/stories/yue/0294_亞嫲嘅香蕉_slides.html" target="_blank">亞嫲嘅香蕉</a></td>
+      <td><a href="/stories/yue/0294_亞嫲嘅香蕉_slides.html" target="_blank">婆婆嘅香蕉</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -4761,7 +4773,7 @@
       <td>0072</td>
       <td><a href="http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -4971,7 +4983,7 @@
       <td>0201</td>
       <td><a href="http://africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#tl0201">tl</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#tl0201">tl</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
