--- a/stories/yue/0158_雞乸同老鷹.html
+++ b/stories/yue/0158_雞乸同老鷹.html
@@ -63,7 +63,7 @@ Ann Nduku<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
 
-<p>雞乸瞓飽咗成晚，就諗出咗個好計。佢開始搵埋其他雀仔掉落嚟嘅羽毛，就話：“讓我哋將呢啲羽毛都縫住喺我哋身上啦，或者可以行路就唔使咁辛苦啦。”</p>
+<p>雞乸瞓飽咗成晚，就諗出咗個好計。佢開始搵埋其他雀仔掉落嚟嘅羽毛，就話：“等我哋將呢啲羽毛都縫住喺我哋身上啦，或者可以行路就唔使咁辛苦啦。”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Ann Nduku<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
 
-<p>當雞乸喺地下見到老鷹隻影仔嘅時候呢，佢就會警告自己嘅細蚊仔：“快啲匿埋吖！唔好喺呢個空曠嘅地方度。”班細蚊仔答佢就話：“我哋先至冇咁傻啦，我哋會走嘅。”</p>
+<p>當雞乸喺地下見到老鷹隻影仔嘅時候呢，佢就會警告自己嘅細蚊仔：“快啲匿埋吖！唔好响呢個空曠嘅地方度。”班細蚊仔就會答佢話：“我哋先至冇咁傻啦，我哋會走㗎。”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
