--- a/stories/yue/0072_指蜜鳥嘅報仇_slides.html
+++ b/stories/yue/0072_指蜜鳥嘅報仇_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>雞乸同老鷹 - Global African Storybook</title>
+  <title>指蜜鳥嘅報仇 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="雞乸同老鷹" class="slide level1">
-<h1>雞乸同老鷹</h1>
+<section id="指蜜鳥嘅報仇" class="slide level1">
+<h1>指蜜鳥嘅報仇</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p>好耐好耐之前，雞乸同老鷹係好朋友。佢哋同其他雀仔住喺一齊，相安無事，但係佢哋都唔識飛。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
+<p>呢個係講指蜜鳥奈吉同貪心嘅後生仔健基利嘅故仔。有一日呢，健基利出門打獵，突然間，佢聽到咗奈吉嘅叫聲。健基利一諗起跟住指蜜鳥就可以搵到好味嘅蜜糖，就忍唔住流晒口水啦。佢停低落嚟，好仔細噉聽住，四周圍搵吓，直到佢喺頭上嘅樹枝中間睇到咗指蜜鳥。小雀仔吱吱聲噉叫，由一樖樹飛到另外一樖。指蜜鳥一路飛一路叫，令到健基利跟得埋佢噉。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p>有一日呢，佢哋住嘅地方發生咗場大飢荒。老鷹成日要走好遠好遠先至可以搵到嘢食。噉佢翻嚟嘅時候就癐拉拉啦。老鷹就話：“噉樣做嘢實在太癐啦，肯定有個更加慳力嘅辦法。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
+<p>過咗半個鐘咁上下，佢哋到咗一樖巨大嘅野無花果樹底下。奈吉喺樹枝之間扎扎跳，然之後喺其中之一條樹枝上面停低咗落嚟，佢同健基利歪咗個頭殼，好像喺度同佢講：“就係呢度啦！快啲嚟啦！唔好再揼時間啦！”健基利企喺樖樹底下，一隻蜜蜂都睇唔到，但係佢信奈吉唔會呃佢㗎。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>雞乸瞓飽咗成晚，就諗出咗個好計。佢開始搵埋其他雀仔掉落嚟嘅羽毛，就話：“等我哋將呢啲羽毛都縫住喺我哋身上啦，或者可以行路就唔使咁辛苦啦。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/04.jpg" /></p>
+<p>健基利將佢攞嚟打獵嗰條長矛擺喺樖樹底下，搵埋幾條乾樹枝，點起咗堆火。等到個火燒到好旺嘅時候，佢攞咗條又長又乾嘅樹枝，撥入個火中心。呢種木頭燒起上嚟嘅時候呢，就會釋放出好多煙嚟。健基利一手攞住條樹枝嘅另一端，第二隻手就捉住樹幹，開始爬上樹。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p>老鷹呢就係成條村入便唯一個有眼針嘅雀仔，所以佢第一個開始縫羽毛。佢俾自己做咗對非常之靚嘅翼仔，做完之後呢，就响雞乸頭上面飛嚟飛去。雞乸問老鷹借咗眼針過嚟，但係佢好快就厭咗縫紉工作。噉佢就將針頭留喺櫃桶度，跑咗去廚房俾細蚊仔煮飯。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/05.jpg" /></p>
+<p>冇幾耐之後呢健基利就聽到咗小蜜蜂飛嚟飛去嘅嗡嗡聲。佢哋喺樹嘅主幹入便築咗個竇，正忙住飛入去又飛出嚟噉。當健基利爬到蜂竇處嘅時候，佢將樹枝仲燒緊嘅一端猛噉督住個蜂竇。班小蜜蜂好驚煙，就食咗火藥噉全部都飛咗出嚟，但係都冇忘記順手俾健基利塊面同埋身上狼噉針佢幾啖囉。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p>其他雀仔見到老鷹飛得又高又遠，非常之羨慕。佢哋問雞乸借咗針頭，噉樣佢哋也可以俾自己做埋翼仔添。過咗冇幾耐之後呢，其他雀仔亦都飛晒上天啦。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
+<p>小蜜蜂全部都飛咗出嚟啦，健基利一隻手伸入個蜂竇入便，掘到咗好多塊蜜糖，又甜又香嘅蜜糖由蜜糖塊上面滴落嚟，睇起嚟極好味噉。佢小心翼翼噉就放啲蜜糖塊入膊頭上嘅袋入便，慢慢噉由樹上面爬翻落嚟。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p>當最後一隻雀仔嚟歸還翻眼針嘅時候，雞乸唔喺屋企。佢嘅細蚊仔攞走咗眼針，玩嚟玩去。佢哋玩厭嘅時候，就將針頭留低咗喺沙地度。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/07.jpg" /></p>
+<p>奈吉急不及待噉睇住健基利做埋晒呢啲嘢，佢等住健基利攪掂晒後送佢一小塊蜜糖，作為幫佢引路嘅謝禮。健基利喺樹枝間好輕快噉跳嚟跳去，離地面越嚟越近。終於健基利穩穩落地，奈吉企住喺離佢唔遠嘅一嚿大石上面，等住健基利俾份禮物佢。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p>嗰日晏晝，老鷹翻咗嚟，佢問雞乸要翻自己嗰眼針，因為佢要修補啲鬆散嘅羽毛。雞乸喺櫃桶、廚房同後院搵佢，但係點都搵唔到眼針出嚟。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
+<p>但係健基利就滅咗個火，搦起咗條長矛，開始走翻屋企，詐諦睇唔見奈吉個樣。奈吉大發雷霆噉叫住：“俾蜜糖我！俾蜜糖我！”健基利停低咗落嚟，盯住小雀仔，大笑噉就話：“老友吖，你都想食蜜糖呀，係唔係？哈哈，我做咗咁多嘢，又被針咗咁多啖！我點解要同你分享呢啲蜜糖先？”講完，健基利就走遠咗啦。奈吉激到奀晒，佢都從來冇試過被人噉樣對待！不過佢實會報到仇嘅。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>雞乸噅老鷹就話：“再俾一日時間我啦！聽日你就可以修補對翼，飛去搵嘢食啦。”老鷹就話：“好吖，就俾多日你。如果你仲搵唔翻眼針嘅話，你就要俾你一個細蚊仔我作為補償。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
+<p>過咗幾個星期呢，健基利又聽到咗奈吉嘅叫聲。佢諗翻好味嘅蜜糖，急不及待噉就跟住指蜜鳥走咗去。奈吉領住健基利行到森林嗰便，喺一樖大樹頂上停低咗落嚟。健基利心諗：“哈哈，樹上面肯定有個蜂竇。”佢嗱嗱聲噉生咗堆火，又攞埋燒緊嘅樹枝開始爬樹。奈吉停咗喺嗰便一切都睇到晒。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p>第二日呢，老鷹嚟咗，佢見到雞乸正喺沙地入便搲嚟搲去，但係都係搵唔翻嗰眼針嚟。於是乎老鷹就由天上俯衝落嚟，捉到隻小雞仔就飛走咗。由嗰日之後呢，無論老鷹幾時喺天上面出現呢，佢都會見到雞乸喺沙地度搵緊針頭。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
+<p>健基利爬住爬住，心入便覺得好出奇，乜佢仲冇聽到嗡嗡聲呢？佢諗住，蜂竇一定喺樹頂上好深嘅地方。佢拉住樹枝，跳上樹：不過嗰度冇蜂竇，佢淨係見到隻大花豹！花豹非常之嬲，因為健基利打攪咗佢搵周公。花豹瞇埋對眼，擘大個口，露出咗又白又尖嘅大牙嚟。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>當雞乸喺地下見到老鷹隻影仔嘅時候呢，佢就會警告自己嘅細蚊仔：“快啲匿埋吖！唔好响呢個空曠嘅地方度。”班細蚊仔就會答佢話：“我哋先至冇咁傻啦，我哋會走㗎。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
+<p>健基利冇等到花豹向佢撲埋嚟，就飛噉快爬翻落樹。但係佢爬得太過急啦，一唔小心就踩咗個吉，重重噉跌到地下，扭親咗腳眼。佢趷吓趷吓噉走甩咗。好彩花豹仲未完全瞓醒，冇再追埋健基利。指蜜鳥奈吉已經報咗仇，健基利亦都學到咗教訓。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,21 @@
 </section>
 <section class="slide level1">
 
-<h2 id="雞乸同老鷹-1">雞乸同老鷹</h2>
-<strong>文:</strong> Ann Nduku<br> <strong>圖:</strong> Wiehan de Jager<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
+<p>噉以後呢，當健基利班細路仔聽到奈吉嘅故仔，佢哋都非常之尊重呢隻小雀仔。佢哋每次收穫蜜糖嘅時候，亦都會將最大嘅一塊留俾指蜜鳥啦。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="指蜜鳥嘅報仇-1">指蜜鳥嘅報仇</h2>
+<strong>文:</strong> Zulu folktale<br> <strong>圖:</strong> Wiehan de Jager<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
