--- a/stories/yue/0201_驢仔_slides.html
+++ b/stories/yue/0201_驢仔_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>雞乸同老鷹 - Global African Storybook</title>
+  <title>驢仔 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="雞乸同老鷹" class="slide level1">
-<h1>雞乸同老鷹</h1>
+<section id="驢仔" class="slide level1">
+<h1>驢仔</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p>好耐好耐之前，雞乸同老鷹係好朋友。佢哋同其他雀仔住喺一齊，相安無事，但係佢哋都唔識飛。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
+<p>係一個小女仔最先發現咗遠處有隻好出奇嘅影仔喺度。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p>有一日呢，佢哋住嘅地方發生咗場大飢荒。老鷹成日要走好遠好遠先至可以搵到嘢食。噉佢翻嚟嘅時候就癐拉拉啦。老鷹就話：“噉樣做嘢實在太癐啦，肯定有個更加慳力嘅辦法。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
+<p>嗰隻影仔越嚟越近，佢終於睇清楚咗嘞，嗰個係一個就快要生仔嘅女人。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>雞乸瞓飽咗成晚，就諗出咗個好計。佢開始搵埋其他雀仔掉落嚟嘅羽毛，就話：“等我哋將呢啲羽毛都縫住喺我哋身上啦，或者可以行路就唔使咁辛苦啦。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
+<p>小女仔有啲怕醜，但佢都係好勇敢噉樣走咗上前。同小女仔隨行嘅人就話：“我哋一定要同佢留喺一齊，我哋一定要保護佢同埋佢個仔。”</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p>老鷹呢就係成條村入便唯一個有眼針嘅雀仔，所以佢第一個開始縫羽毛。佢俾自己做咗對非常之靚嘅翼仔，做完之後呢，就响雞乸頭上面飛嚟飛去。雞乸問老鷹借咗眼針過嚟，但係佢好快就厭咗縫紉工作。噉佢就將針頭留喺櫃桶度，跑咗去廚房俾細蚊仔煮飯。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
+<p>個仔好快就要出世㗎嘞。“大力啲吖！”“快啲攞條毛氈嚟！”“水！”“再大力啲！”</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p>其他雀仔見到老鷹飛得又高又遠，非常之羨慕。佢哋問雞乸借咗針頭，噉樣佢哋也可以俾自己做埋翼仔添。過咗冇幾耐之後呢，其他雀仔亦都飛晒上天啦。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
+<p>當佢哋見到嗰個仔嘅時候，所有人都嚇咗一跳，“一隻驢仔？”</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p>當最後一隻雀仔嚟歸還翻眼針嘅時候，雞乸唔喺屋企。佢嘅細蚊仔攞走咗眼針，玩嚟玩去。佢哋玩厭嘅時候，就將針頭留低咗喺沙地度。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
+<p>大家七嘴八舌噉嘈起上嚟。佢哋就話：“我哋講過要保護呢個媽咪同細蚊仔嘅，我哋一定要噉樣做。”但係仲有啲人力駁就話：“但係佢哋會俾我哋佗衰㗎。”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p>嗰日晏晝，老鷹翻咗嚟，佢問雞乸要翻自己嗰眼針，因為佢要修補啲鬆散嘅羽毛。雞乸喺櫃桶、廚房同後院搵佢，但係點都搵唔到眼針出嚟。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
+<p>個女人發現自己又係孤零零一個人嘞。佢唔知道應該攞呢個怪仔點算，佢亦都唔知道自己應該點算。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>雞乸噅老鷹就話：“再俾一日時間我啦！聽日你就可以修補對翼，飛去搵嘢食啦。”老鷹就話：“好吖，就俾多日你。如果你仲搵唔翻眼針嘅話，你就要俾你一個細蚊仔我作為補償。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
+<p>最屘，佢決定接受呢個仔，做佢嘅媽咪。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p>第二日呢，老鷹嚟咗，佢見到雞乸正喺沙地入便搲嚟搲去，但係都係搵唔翻嗰眼針嚟。於是乎老鷹就由天上俯衝落嚟，捉到隻小雞仔就飛走咗。由嗰日之後呢，無論老鷹幾時喺天上面出現呢，佢都會見到雞乸喺沙地度搵緊針頭。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
+<p>如果呢個仔一直都係咁大嘅啫，唔會大個仔嘅話，一切都會變得唔同晒。但係呢個驢仔越長越大，而家佢再又唔能夠俾媽咪孭住喺背脊上面。無論佢幾努力，佢始終唔可以似翻人類噉樣。佢嘅媽咪癐咗，放棄咗。有啲時，佢仲會叫佢做埋啲動物先至會做嘅粗重嘢。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>當雞乸喺地下見到老鷹隻影仔嘅時候呢，佢就會警告自己嘅細蚊仔：“快啲匿埋吖！唔好响呢個空曠嘅地方度。”班細蚊仔就會答佢話：“我哋先至冇咁傻啦，我哋會走㗎。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
+<p>驢仔覺得好迷茫，又好勞氣。佢噉樣又唔得，嗰樣又唔得。有日呢，佢大發雷霆，一腳就踢佢媽咪落地下。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,102 @@
 </section>
 <section class="slide level1">
 
-<h2 id="雞乸同老鷹-1">雞乸同老鷹</h2>
-<strong>文:</strong> Ann Nduku<br> <strong>圖:</strong> Wiehan de Jager<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
+<p>驢仔又羞又愧，佢唯有走甩咗，走得越遠越好。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
+<p>當佢停低落嚟嘅時候呢，天都已經黑晒，驢仔蕩失路嘞。佢喺暗黑中“哼哼”聲叫住，暗黑中傳翻嚟咗回聲，“哼哼”。佢孤零零一支公，卷成咗一團，心中充滿煩惱，就淰淰噉瞓著咗。</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
+<p>驢仔醒翻嚟就發現有個老人耷低頭望住佢。佢睇住老人對眼，感覺到咗一絲希望。</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
+<p>驢仔同老人一齊住，老人教識咗佢好多生存嘅本領。驢仔認真聽住老人，學得好快。老人亦都學到咗好多嘢。佢哋互相幫助，遇到開心嘅事就一齊哈哈大笑。</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
+<p>一日朝頭早，老人叫驢仔帶佢去山頂上面。</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
+<p>佢哋登上山頂，環繞喺雲霧中，瞓著咗。驢仔發夢見到佢媽咪生病咗，正喺度叫緊佢，然之後佢就醒咗……</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
+<p>……雲霧消失咗，佢嘅朋友—嗰個老人—亦都消失咗。</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
+<p>驢仔終於知道咗佢要點做嘞。</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
+<p>驢仔搵到咗佢嘅媽咪，佢孤零零一個人，正喺度為佢走失嘅細蚊仔而傷心。佢哋互相打量咗好耐，然之後緊緊噉抱住喺咗一齊。</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
+<p>驢仔同媽咪一齊住，慢慢長大，仲學識咗點樣共同生活。慢慢，其他家庭亦都搬咗嚟佢哋左近，住咗落嚟。</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="驢仔-1">驢仔</h2>
+<strong>文:</strong> Lindiwe Matshikiza<br> <strong>圖:</strong> Meghan Judge<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/donkey-child'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
