--- a/stories/yue/0291_夫思家姐係點樣講_slides.html
+++ b/stories/yue/0291_夫思家姐係點樣講_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
-<p>夫思帶住隻雞蛋出發，佢喺路上遇到咗兩個正喺度摘緊生果嘅男仔。其中之一個男仔捉到隻雞蛋，掟過去果樹嗰便，噉隻雞蛋咪掟爛咗。</p>
+<p>夫思帶住隻雞蛋出發，佢喺路上遇到咗兩個正喺度摘緊生果嘅男仔。其中之一個男仔捉到隻雞蛋，掟咗過去樖果樹嗰便，噉隻雞蛋咪就掟爛咗。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
-<p>班男仔整蠱咗夫思覺得好對唔住。其中之一個男仔就話：“我哋冇辦法幫你做蛋糕，但係我哋呢度有條木棍，可以送俾你姐姐。”噉夫思就帶上咗條木棍，繼續上路。</p>
+<p>兩個男仔整蠱咗夫思覺得好對佢唔住。其中之一個男仔就話：“我哋冇辦法幫你做蛋糕，但係我哋呢度有條木棍，可以送俾你姐姐。”噉夫思就帶上咗條木棍，繼續上路。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
-<p>夫思喺路上又碰到咗兩個起緊屋嘅工人。其中之一個工人就問佢：“我哋可唔可以借用吓條木棍呀？”但係條木棍唔係好實淨，咪就斷咗啦。</p>
+<p>夫思喺路上又碰到咗兩個起緊屋嘅工人。其中之一個工人就問佢：“我哋可唔可以借用吓你條木棍呀？”但係條木棍唔係好實淨，咪就斷咗啦。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
-<p>起屋工人覺得好對唔住夫思，因為佢哋整斷咗佢條木棍。其中之一個工人就话：“我哋冇辦法幫住做蛋糕，但我呢度有啲茅草，可以送俾你姐姐。”噉夫思就帶上咗茅草，繼續上路。</p>
+<p>起屋工人覺得好對唔住夫思，因為佢哋整斷咗佢條木棍。其中之一個工人就話：“我哋冇辦法幫住做蛋糕，但我呢度有啲茅草，可以送俾你姐姐。”噉夫思就帶上咗茅草，繼續上路。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
-<p>喺路上，夫思遇到咗個農夫同佢隻奶牛。隻奶牛就话：“幾靚嘅茅草吖！我可唔可以試吓？”但係茅草太好味啦，奶牛一啖就全部都食晒啦！</p>
+<p>喺路上，夫思遇到咗個農夫同佢隻奶牛。隻奶牛就話：“幾靚嘅茅草吖！我可唔可以試吓？”但係茅草太好味啦，奶牛一啖就全部都食晒啦！</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
-<p>夫思叫咗出嚟：“你攪咩嘢呀？嗰啲茅草係俾我家姐嘅禮物。起屋工人俾咗嗰啲茅草我，因為佢哋整斷咗摘生果嘅人俾我嘅木棍。摘生果嘅人俾咗條木棍我，又係因為佢哋打爛咗攞嚟做蛋糕嘅雞蛋。隻蛋糕係俾我家姐行婚禮嘅禮物。而家隻雞蛋都冇晒，個蛋糕都冇晒，份禮物都冇晒，我家姐會點講呀？”</p>
+<p>夫思叫咗出嚟：“你攪咩嘢呀？嗰啲茅草係俾我家姐嘅禮物。起屋工人俾咗嗰啲茅草我，係因為佢哋整斷咗摘生果嘅人俾我嘅木棍。摘生果嘅人俾咗條木棍我，又係因為佢哋打爛咗攞嚟做蛋糕嘅雞蛋。隻蛋糕係俾我家姐行婚禮嘅禮物。而家隻雞蛋都冇晒，個蛋糕都冇晒，份禮物都冇晒，我家姐會點講呀？”</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
-<p>奶牛好對唔住，因為佢太過自私啦。農夫就決定俾奶牛跟住夫思，作為送俾佢家姐嘅禮物。噉夫思就繼續上路啦。</p>
+<p>奶牛好對唔住，因為佢太過自私啦。農夫就決定俾奶牛跟住夫思行，作為送俾佢家姐嘅禮物。噉夫思就領住隻奶牛，繼續上路啦。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
-<p>但係，到咗食晚飯嘅時候，隻奶牛走翻咗農場嘞，夫思亦都係途中蕩失路。佢好夜先至到家姐嘅婚禮，嗰陣時啲客都已經喺度食緊飯。</p>
+<p>但係，到咗食晚飯嘅時候，隻奶牛走翻咗農場嘞，夫思亦都係途中蕩失路。佢好夜先至到家姐嘅婚禮度，嗰陣時啲客都已經喺度食緊飯囉。</p>
 <center>
 <strong>11</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
-<p>夫思嘅家姐諗咗一陣，就话：“夫思，我親愛嘅細佬，我唔志在有冇份禮物。我都唔介意有冇個蛋糕。我哋今日聚埋喺一齊，我就好開心啦。快啲著埋靚衫，我哋一齊慶祝啦！”噉夫思家姐係點樣講，佢咪就照做囉。</p>
+<p>夫思嘅家姐諗咗一陣，就話：“夫思，我親愛嘅細佬，我唔志在有冇份禮物。我都唔介意有冇個蛋糕。我哋今日聚埋一齊，我就已經好開心啦。你快啲著埋飲衫，同我哋一齊慶祝啦！”噉佢家姐係點樣講，夫思咪就照做囉。</p>
 <center>
 <strong>13</strong>
 </center>
