--- a/stories/yue/0294_亞嫲嘅香蕉_slides.html
+++ b/stories/yue/0294_亞嫲嘅香蕉_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>亞嫲嘅香蕉 - Global African Storybook</title>
+  <title>婆婆嘅香蕉 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="亞嫲嘅香蕉" class="slide level1">
-<h1>亞嫲嘅香蕉</h1>
+<section id="婆婆嘅香蕉" class="slide level1">
+<h1>婆婆嘅香蕉</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
-<p>亞嫲有個好靚嘅花園，種滿晒啲高粱，小米同木薯，但入便最好嘢嘅就係香蕉。亞嫲雖然有好多孫仔孫女，但我心入面知道佢最鍾意我0架。佢時時都會請我嚟佢屋企玩，話啲小秘密我聽。但係有一個秘密佢從來都冇試過同我講，就係佢催熟香蕉嘅辦法。</p>
+<p>婆婆有個好靚嘅花園，種滿晒啲高粱，小米同埋木薯，但係咁多嘢入便最好嘅就係香蕉。婆婆雖然有好多孫仔孫女，但係我心入便知道佢最鍾意我㗎。佢時時都會請我嚟佢屋企玩，講啲小秘密俾我聽。但係有一個秘密佢從來都冇試過同我講，就係佢催熟香蕉嘅辦法。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
-<p>有一日，我睇到亞嫲放咗一個巨大嘅草籃喺門外。我問亞嫲呢個係攞嚟做咩嘢嘅，但係亞嫲就單單話：“呢個係我嘅神秘籃仔。”籃仔一邊放咗幾隻香蕉葉，亞嫲間中都會翻轉啲葉幾下。我好好奇，就問亞嫲：“呢啲葉係攞嚟做咩嘢嘅？”但係亞嫲就單單話：“呢啲係我嘅神秘葉仔。”</p>
+<p>有一日，我見到婆婆放咗一個巨大嘅草籃喺門外。我問婆婆呢個係攞嚟做咩嘢嘅，但係婆婆就單單話：“呢個係我嘅神秘籃仔。”喺籃仔一邊放咗幾隻香蕉葉，婆婆間中都會去翻轉啲葉幾下。我好好奇，就問婆婆：“呢啲葉係攞嚟做咩嘢嘅？”但係婆婆就單單話：“呢啲係我嘅神秘葉仔。”</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>我好好奇噉睇住亞嫲、香蕉、香蕉葉仲有嗰個巨大嘅草籃。但係亞嫲就打發咗去媽咪嗰便幫手。我噅住亞嫲：“俾我留响度睇吓啦！”但係亞嫲就堅持話：“唔好咁硬頸啦，細蚊仔，照我講嘅去做啦。”我咪唯有走開嘞。</p>
+<p>我好好奇噉睇住婆婆、香蕉、香蕉葉仲有嗰個巨大嘅草籃。但係婆婆就打發咗我去媽咪嗰便幫手。我噅住婆婆就話：“俾我留响度睇吓啦！”但係婆婆就堅持話：“唔好咁硬頸啦，細蚊仔，照我講嘅去做啦。”我咪唯有走開嘞。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>到我翻嚟嗰陣時，亞嫲正坐喺外便唞吓，但係籃仔同香蕉都唔見咗啦！我就問亞嫲：“籃仔去咗邊度呀？香蕉去咗邊度呀？仲有嗰啲......”但係亞嫲就話：“佢哋都喺一個神秘嘅地方。”我太失望啦！</p>
+<p>到我翻嚟嗰陣時，婆婆正坐喺外便唞吓，但係籃仔同香蕉都唔見咗晒啦！我就問婆婆：“籃仔去咗邊度呀？香蕉去咗邊度呀？仲有嗰啲......”但係婆婆就話：“佢哋都喺一個神秘嘅地方。”我太失望啦！</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>過咗兩日，亞嫲叫我由佢間房度攞佢支士的嚟俾佢。我一打開門，就聞到咗朕熟香蕉嘅味道。原來亞嫲嘅神秘籃仔就擺响佢間房度！上面𢫏咗條舊毛氈，我揭開條毛氈，大力聞住嗰朕香噴噴嘅味道。</p>
+<p>過咗兩日時間，婆婆就叫我由佢間房度攞佢支士的嚟俾佢。我一打開道門，就聞到咗朕熟香蕉嘅味道。原來婆婆嘅神秘籃仔就擺响佢間房度！上面𢫏咗條舊毛氈，我揭開條毛氈，大力聞住嗰朕香噴噴嘅味道。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>亞嫲嗌我嘅時候，嚇咗我一跳：“你喺度做緊乜嘢？快啲攞我支士的嚟。”我趕緊攞咗支士的出去俾亞嫲。亞嫲睇住我，就問：“你喺度笑緊乜嘢呀？”我噉先至意識到，我仲喺度因為發現咗呢個神奇嘅秘密而偷笑住。</p>
+<p>婆婆嗌我嘅時候，嚇咗我一跳：“你喺度做緊乜嘢？快啲攞我支士的嚟。”我趕緊攞咗支士的出去俾婆婆。婆婆睇住我，就問：“你喺度笑緊乜嘢呀？”我噉先至意識到，我仲喺度因為發現咗呢個神奇嘅秘密而偷笑住。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>第二日，亞嫲嚟睇我媽咪，我又走到亞嫲屋企去偷睇嗰啲熟香蕉。有一梳香蕉已經非常之熟嘞。我摘咗一條香蕉，收埋咗佢喺我條裙度。𢫏翻好個籃仔之後，我就走到間屋後便，偷偷噉食晒條香蕉：呢個絕對係我食過最好味嘅香蕉啦！</p>
+<p>第二日呢，婆婆嚟睇我媽咪，我又走到婆婆屋企去偷睇嗰啲熟香蕉。有一梳香蕉已經非常之熟嘞。我摘咗一條香蕉，收埋咗佢喺我條裙仔度。𢫏翻好個籃仔之後，我就走到間屋後便，偷偷噉食咗條香蕉：呢個絕對係我食過最好味嘅香蕉啦！</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
-<p>第二日，我趁亞嫲喺花園度摘蔬菜嘅時候，偷偷走入佢間房去睇嗰啲香蕉。啲香蕉差唔多全部都熟晒嘞。我就頂唔順誘惑啦，攞咗四條香蕉。我䟴高腳離開佢間房，就聽到亞嫲喺度咳緊。我收埋啲香蕉喺條裙下底，好似乜都冇發生過噉就走開咗。</p>
+<p>第二日，我趁婆婆喺花園度摘蔬菜嘅時候，又偷偷走入佢間房去睇嗰啲香蕉。啲香蕉差唔多全部都熟晒嘞。我就頂唔順誘惑啦，攞咗四條香蕉。我䟴高腳離開佢間房，就聽到婆婆喺度咳緊。我收埋啲香蕉喺條裙仔下底，好似乜都冇發生過噉就走開咗。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
-<p>第二日係亞嫲趁墟打市嘅日子。亞嫲好早就起身，佢將成熟咗嘅香蕉同木薯運到墟場度去賣。我嗰日冇急住去睇佢，但係我知道，我冇可能永遠避住亞嫲。</p>
+<p>第二日係婆婆趁墟打市嘅日子。婆婆好早就起身，佢將成熟咗嘅香蕉同木薯運到墟場度去賣。我嗰日冇急住去睇佢，但係我知道，我冇可能永遠避住婆婆。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
-<p>嗰日挨晚，我被老竇老母同亞嫲叫咗過去。我知道佢哋點解搵我。嗰日晚上，當我上床瞓覺嘅時候，我知道我再又唔會偷嘢啦，唔偷亞嫲嘅，唔偷老竇老母嘅，邊個啲嘢都唔會再偷。</p>
+<p>嗰日挨晚，我被老竇老母同埋婆婆叫咗過去。我知道佢哋點解搵我。嗰日晚上，當我上床瞓覺嘅時候，我知道我再又唔會偷嘢啦，唔偷婆婆嘅，唔偷老竇老母嘅，邊個啲嘢都唔可以再偷。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,7 +186,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="亞嫲嘅香蕉-1">亞嫲嘅香蕉</h2>
+<h2 id="婆婆嘅香蕉-1">婆婆嘅香蕉</h2>
 <strong>文:</strong> Ursula Nafula<br> <strong>圖:</strong> Catherine Groenewald<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
