--- a/stories/index.html
+++ b/stories/index.html
@@ -4442,6 +4442,12 @@
       <td><a name="tr0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0087</td>
+      <td><a href="/stories/tr/0087_okumayı-seviyorum_slides.html" target="_blank">Okumayı Seviyorum!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0110</td>
       <td><a href="/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html" target="_blank">Bir Küçük Tohum: Wangari Maathai’nin Hikayesi</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4452,6 +4458,24 @@
       <td><a href="/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok_slides.html" target="_blank">Neden Su Aygırlarının Tüyleri Yok</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0112</td>
+      <td><a href="/stories/tr/0112_vücudüm_slides.html" target="_blank">Vücudüm</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/tr/0120_saç_slides.html" target="_blank">Saç</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0231</td>
+      <td><a href="/stories/tr/0231_hava-durumu-kitabı_slides.html" target="_blank">Hava Durumu Kitabı</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0243</td>
@@ -4803,7 +4827,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
@@ -4857,13 +4881,13 @@
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#it0112">it</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#pa0112">pa</a>, <a href="#tl0112">tl</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#it0112">it</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#pa0112">pa</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
       <td><a href="http://africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0120">ar</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#it0120">it</a>, <a href="#ko0120">ko</a>, <a href="#no0120">no</a>, <a href="#pa0120">pa</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#ar0120">ar</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#it0120">it</a>, <a href="#ko0120">ko</a>, <a href="#no0120">no</a>, <a href="#pa0120">pa</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0121</td>
@@ -5037,7 +5061,7 @@
       <td>0231</td>
       <td><a href="http://africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0231">ar</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#it0231">it</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#ar0231">ar</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#it0231">it</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#tr0231">tr</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
