--- a/stories/tr/0231_hava-durumu-kitabı_slides.html
+++ b/stories/tr/0231_hava-durumu-kitabı_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ਦਾਦੀ ਦੇ ਕੇਲੇ - Global African Storybook</title>
+  <title>Hava Durumu Kitabı - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ਦਦ-ਦ-ਕਲ" class="slide level1">
-<h1>ਦਾਦੀ ਦੇ ਕੇਲੇ</h1>
+<section id="hava-durumu-kitabı" class="slide level1">
+<h1>Hava Durumu Kitabı</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
-<p>ਦਾਦੀ ਦਾ ਬਾਗ ਸ਼ਾਨਦਾਰ ਚਰੀ, ਬਾਜਰੇ, ਅਤੇ ਕਸਾਵੇ ਨਾਲ ਭਰਿਆ ਹੋਇਆ ਸੀ। ਪਰ ਕੇਲੇ ਸਭ ਤੋਂ ਵਧੀਆ ਸਨ। ਦਾਦੀ ਦੇ ਕਈ ਪੋਤੇ ਪੋਤੀਆਂ ਸਨ ਪਰ ਮੈਨੂੰ ਚੋਰੀ-ਛਿਪੇ ਪਤਾ ਸੀ ਕਿ ਮੈਂਂ ਉਸ ਦੀ ਚਹੇਤੀ ਸੀ। ਉਹ ਅਕਸਰ ਮੈਨੂੰ ਉਸ ਦੇ ਘਰ ਸੱਦਦੀ ਸੀ। ਉਹ ਮੈਨੂੰ ਛੋਟੇ-ਛੋਟੇ ਭੇਦ ਵੀ ਦੱਸਦੀ ਸੀ। ਪਰ ਇਕ ਭੇਦ ਉਸ ਨੇ ਮੇਰੇ ਨਾਲ ਨਹੀਂ ਸ਼ੇਅਰ ਕੀਤਾ: ਜਿੱਥੇ ਉਹ ਕੇਲੇ ਪੱਕੇ ਕਰਦੀ ਸੀ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
+<p>Kuru.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
-<p>ਇਕ ਦਿਨ ਮੈਂ ਦਾਦੀ ਦੇ ਘਰ ਵੱਡੀ ਤੂੜੀ ਵਾਲੀ ਟੋਕਰੀ ਬਾਹਰ ਧੁੱਪ ਵਿੱਚ ਰੱਖੀ ਹੋਈ ਦੇਖੀ। ਜਦ ਮੈਂ ਪੁੱਛਿਆ ਕਿ ਇਹ ਕਿਸ ਲਈ ਹੈ ਤਾਂ ਮੈਨੂੰ ਸਿਰਫ ਇੱਕ ਜਵਾਬ ਮਿਲਿਆ, &quot;ਇਹ ਮੇਰੀ ਜਾਦੂ ਵਾਲੀ ਟੋਕਰੀ ਹੈ।&quot; ਟੋਕਰੀ ਦੇ ਲਾਗੇ ਕਈ ਕੇਲੇਆਂ ਦੇ ਪੱਤੇ ਪਏ ਸਨ ਜੋ ਦਾਦੀ ਸਮੇਂ-ਸਮੇਂ ਬਾਅਦ ਬਦਲ ਦਿੰਦੀ ਸੀ। ਮੈਂ ਉਤਸੁਕ ਸੀ। &quot;ਦਾਦੀ ਇਹ ਪੱਤੇ ਕਿਸ ਲਈ ਹਨ?&quot; ਮੈਂ ਪੁੱਛਿਆ। ਮੈਨੂੰ ਸਿਰਫ ਇੱਕ ਜਵਾਬ ਮਿਲਿਆ ਸੀ, &quot;ਉਹ ਮੇਰੇ ਜਾਦੂ ਵਾਲੇ ਪੱਤੇ ਹਨ।&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
+<p>Güneş sıcaktır.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>ਮੈਨੂੰ ਦਾਦੀ, ਕੇਲੇ, ਕੇਲਿਆਂ ਦੇ ਪੱਤੇ ਅਤੇ ਵੱਡੀ ਤੂੜੀ ਵਾਲੀ ਟੋਕਰੀ ਨੂੰ ਦੇਖਣਾਂ ਬਹੁਤ ਦਿਲਚਸਪ ਲੱਗਦਾ ਸੀ। ਪਰ ਦਾਦੀ ਨੇ ਮੈਨੂੰ ਇੱਕ ਕੰਮ ਕਰਨ ਲਈ ਮਾਂ ਕੋਲ ਭੇਜ ਦਿੱਤਾ। “ਦਾਦੀ, ਕਿਰਪਾ ਕਰਕੇ ਮੈਨੂੰ ਤੁਹਾਨੂੰ ਤਿਆਰ ਕਰਦੇ ਹੋਏ ਦੇਖਣ ਦਿਓ…” “ਜ਼ਿੱਦ ਨਹੀਂ ਕਰੋ ਬੱਚੇ, ਉਹ ਕਰੋ ਜੋ ਤੁਹਾਨੂੰ ਦੱਸਿਆ ਹੈ,&quot; ਉਸ ਨੇ ਜ਼ੋਰ ਦਿੱਤਾ। ਮੈਂ ਭੱਜੀ ਗਈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
+<p>Rüzgarlı.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>ਜਦ ਮੈਂ ਵਾਪਸ ਆਈ, ਦਾਦੀ ਬਾਹਰ ਬੈਠੀ ਸੀ ਪਰ ਉਸ ਕੋਲ ਨਾ ਟੋਕਰੀ ਸੀ ਅਤੇ ਨਾ ਹੀ ਕੇਲੇ। “ਦਾਦੀ, ਟੋਕਰੀ ਕਿੱਥੇ ਹੈ, ਸਾਰੇ ਕੇਲੇ ਕਿੱਥੇ ਹਨ, ਅਤੇ ਕਿੱਥੇ…” ਪਰ ਮੈਨੂੰ ਸਿਰਫ ਇੱਕ ਜਵਾਬ ਮਿਲਿਆ, “ਉਹ ਮੇਰੀ ਜਾਦੂ ਵਾਲੀ ਜਗ੍ਹਾ ਵਿੱਚ ਹਨ।” ਇਹ ਬਹੁਤ ਨਿਰਾਸ਼ਾਜਨਕ ਸੀ!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
+<p>Bulutlu.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>ਦੋ ਦਿਨ ਬਾਅਦ, ਦਾਦੀ ਨੇ ਮੈਨੂੰ ਉਸ ਦੇ ਬੈੱਡਰੂਮ ਵਿੱਚੋਂ ਉਸ ਦੀ ਤੁਰਨ ਵਾਲੀ ਸੋਟੀ ਲਿਆਉਣ ਲਈ ਭੇਜਿਆ। ਜਦੋਂ ਹੀ ਮੈਂ ਦਰਵਾਜ਼ਾ ਖੋਲ੍ਹਿਆ, ਮੈਨੂੰ ਪੱਕੇ ਕੇਲਿਆਂ ਦੀ ਮਹਿਕ ਨੇ ਸਵਾਗਤ ਕੀਤਾ। ਅੰਦਰਲੇ ਕਮਰੇ ਵਿਚ ਦਾਦੀ ਦੀ ਵੱਡੀ ਤੂੜੀ ਵਾਲੀ ਟੋਕਰੀ ਪਈ ਸੀ। ਉਹ ਇੱਕ ਪੁਰਾਣੇ ਕੰਬਲ ਦੇ ਨਾਲ ਢੱਕੀ ਹੋਈ ਸੀ। ਮੈਂ ਉਸ ਨੂੰ ਚੁੱਕਿਆ ਅਤੇ ਸ਼ਾਨਦਾਰ ਖੁਸ਼ਬੂ ਨੂੰ ਸੁੰਘਿਆ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
+<p>Soğuk.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>ਦਾਦੀ ਦੀ ਅਵਾਜ਼ ਨੇ ਮੈਨੂੰ ਡਰਾ ਦਿੱਤਾ ਜਦ ਉਸ ਨੇ ਬੁਲਾਇਆ, &quot;ਤੂੰ ਕੀ ਕਰ ਰਹੀਂ ਹੈਂ? ਜਲਦੀ ਕਰ ਅਤੇ ਮੇਰੀ ਸੋਟੀ ਲੈ ਆ।&quot; ਮੈਂ ਉਸ ਦੀ ਤੁਰਨ ਵਾਲੀ ਸੋਟੀ ਨਾਲ ਜਲਦਬਾਜੀ ਨਾਲ ਬਾਹਰ ਗਈ। &quot;ਤੂੰ ਕਿਉਂ ਮੁਸਕਰਾ ਰਹੀ ਹੈਂ?&quot; ਦਾਦੀ ਨੇ ਪੁੱਛਿਆ। ਉਸ ਦੇ ਸਵਾਲ ਨੇ ਮੈਨੂੰ ਇਹਸਾਸ ਦਲਾਇਆ ਕਿ ਮੈਂ ਅਜੇ ਵੀ ਜਾਦੂ ਵਾਲੇ ਸਥਾਨ ਨੂੰ ਲੱਭਣ ਦੀ ਖੁਸ਼ੀ ਵਿਚ ਮੁਸਕਰਾ ਰਹੀ ਸੀ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
+<p>Yağmurlu.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>ਅਗਲੇ ਦਿਨ ਜਦ ਦਾਦੀ ਮੇਰੀ ਮਾਂ ਨੂੰ ਮਿਲਣ ਆਈ, ਮੈਂ ਉਸ ਦੇ ਘਰ ਕਾਹਲੀ ਨਾਲ ਕੇਲੇ ਚੈੱਕ ਕਰਨ ਗਈ। ਉੱਥੇ ਕਈ ਕੇਲੇ ਬਹੁਤ ਪੱਕੇ ਸਨ। ਮੈਂ ਇੱਕ ਚੁੱਕਿਆ ਅਤੇ ਆਪਣੀ ਡਰੈਸ ਵਿੱਚ ਲਕੋ ਲਿਆ। ਟੋਕਰੀ ਨੂੰ ਫਿਰ ਢੱਕਣ ਤੋਂ ਬਾਅਦ, ਮੈਂ ਘਰ ਦੇ ਪਿੱਛੇ ਜਾਕੇ ਤੇਜ਼ੀ ਨਾਲ ਕੇਲਾ ਖਾਧਾ। ਇਸ ਤੋਂ ਜ਼ਿਆਦਾ ਮਿੱਠਾ ਕੇਲਾ ਮੈਂ ਕਦੇ ਵੀ ਨਹੀਂ ਸੀ ਖਾਧਾ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
+<p>Bu şimşek.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
-<p>ਅਗਲੇ ਦਿਨ, ਜਦ ਦਾਦੀ ਬਾਗ ਵਿੱਚ ਸਬਜ਼ੀਆਂ ਤੋੜਦੀ ਸੀ, ਮੈਂ ਅੰਦਰ ਖਿਸਕ ਕੇ ਕੇਲਿਆਂ ਨੂੰ ਦੇਖਿਆ। ਤਕਰੀਬਨ ਸਾਰੇ ਪੱਕੇ ਸਨ। ਮੈਂ ਚਾਰ ਕੇਲਿਆਂ ਦਾ ਗੁੱਛਾ ਚੁੱਕੇ ਬਿਨ੍ਹਾਂ ਰਹਿ ਨਾ ਸਕੀ। ਜਦ ਮੈਂ ਦਰਵਾਜ਼ੇ ਵੱਲ ਆਪਣੇ ਪੈਰ ਦੇ ਅੰਗੂਠਿਆਂ ਤੇ ਤੁਰਦੀ ਗਈ, ਮੈਂ ਬਾਹਰ ਦਾਦੀ ਨੂੰ ਖੰਘਦੇ ਸੁਣਿਆ। ਮੈਂ ਕੇਲੇ ਆਪਣੀ ਡਰੈਸ ਦੇ ਓਹਲੇ ਕੀਤੇ ਅਤੇ ਉਸ ਤੋਂ ਅੱਗੇ ਤੁਰ ਗਈ।</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
+<p>Bir gökkuşağı gördüm.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,36 +168,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
-<p>ਅਗਲੇ ਦਿਨ ਮਾਰਕੀਟ ਵਾਲਾ ਦਿਨ ਸੀ। ਦਾਦੀ ਸਵੇਰੇ ਉੱਠੀ। ਉਹ ਹਮੇਸ਼ਾ ਪੱਕੇ ਕੇਲੇ ਅਤੇ ਕਸਾਵੇ ਮਾਰਕੀਟ ਵਿੱਚ ਵੇਚਣ ਲਈ ਲੈ ਕੇ ਜਾਂਦੀ ਸੀ। ਮੈਂ ਉਸ ਦਿਨ ਉਸ ਨੂੰ ਮਿਲਣ ਦੀ ਜਲਦੀ ਨਹੀਂ ਕੀਤੀ। ਪਰ ਮੈਂ ਜਿਆਦਾ ਸਮੇਂ ਤੱਕ ਉਸ ਨੂੰ ਟਾਲ ਨਹੀਂ ਸੀ ਸਕਦੀ।</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
-<p>ਉਸ ਸ਼ਾਮ, ਮੈਨੂੰ ਮੇਰੇ ਮਾਤਾ, ਪਿਤਾ ਅਤੇ ਦਾਦੀ ਨੇ ਬੁਲਾਇਆ। ਮੈਨੂੰ ਪਤਾ ਸੀ ਕਿਉਂ। ਉਸ ਰਾਤ ਜਦ ਮੈਂ ਸੌਣ ਗਈ, ਮੈਂ ਸੋਚਿਆ ਕਿ ਮੈਂ ਫੇਰ ਚੋਰੀ ਨਹੀਂ ਕਰਾਂਗੀ, ਮੇਰੀ ਮਾਪਿਆਂ ਤੋਂ ਨਹੀਂ, ਮੇਰੀ ਦਾਦੀ ਤੋਂ ਨਹੀਂ ਅਤੇ ਖ਼ਾਸ ਕਰਕੇ ਕਿਸੇ ਹੋਰ ਤੋਂ ਨਹੀਂ।</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="ਦਦ-ਦ-ਕਲ-1">ਦਾਦੀ ਦੇ ਕੇਲੇ</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
+<h2 id="hava-durumu-kitabı-1">Hava Durumu Kitabı</h2>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/weather-book'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
