--- a/stories/index.html
+++ b/stories/index.html
@@ -749,6 +749,12 @@
       <td><a name="yue0309"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0315</td>
+      <td><a href="/stories/yue/0315_沙基馬嘅歌聲_slides.html" target="_blank">沙基馬嘅歌聲</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0324</td>
       <td><a href="/stories/yue/0324_離開屋企去城市嘅日子_slides.html" target="_blank">離開屋企去城市嘅日子</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5181,7 +5187,7 @@
       <td>0315</td>
       <td><a href="http://africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ko0315">ko</a>, <a href="#pa0315">pa</a>, <a href="#tl0315">tl</a>, <a href="#zh0315">zh</a></td>
+      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ko0315">ko</a>, <a href="#pa0315">pa</a>, <a href="#tl0315">tl</a>, <a href="#yue0315">yue</a>, <a href="#zh0315">zh</a></td>
     </tr>
     <tr>
       <td>0319</td>
